--- a/resources/apps/namespaces/device1/base/super-api-release.yaml
+++ b/resources/apps/namespaces/device1/base/super-api-release.yaml
@@ -10,7 +10,7 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: flux-system
+        name: cluster-config
   install:
     createNamespace: true
   interval: 1m0s
