--- a/clusters/dev/apps.yaml
+++ b/clusters/dev/apps.yaml
@@ -2,14 +2,14 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1beta1
 kind: Kustomization
 metadata:
   name: apps
-  namespace: flux-system
+  namespace: cluster-config
 spec:
   interval: 10m0s
   dependsOn:
     - name: common
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: cluster-config
   path: ./apps/namespaces
   prune: true
   validation: client
