--- a/resources/common/infra/redis-release.yaml
+++ b/resources/common/infra/redis-release.yaml
@@ -11,7 +11,7 @@ spec:
       sourceRef:
         kind: HelmRepository
         name: redis
-        namespace: flux-system
+        namespace: cluster-config
   install:
     createNamespace: true
   interval: 1m0s
