--- a/resources/apps/namespaces/device1/base/super-api-release.yaml
+++ b/resources/apps/namespaces/device1/base/super-api-release.yaml
@@ -1,5 +1,5 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2
+apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
   name: super-api
@@ -10,7 +10,8 @@ spec:
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
-        name: cluster-config
+        name: super-api
+        namespace: cluster-config
   install:
     createNamespace: true
   interval: 1m0s
