--- a/clusters/dev/apps.yaml
+++ b/clusters/dev/apps.yaml
@@ -5,14 +5,13 @@ metadata:
   namespace: cluster-config
 spec:
   interval: 10m0s
-  # dependsOn:
-  #   - name: common
+  dependsOn:
+    - name: common
   sourceRef:
     kind: GitRepository
     name: cluster-config
   path: ./resources/apps/namespaces
   prune: true
-  validation: client
   # healthChecks:
   #   - apiVersion: apps/v1
   #     kind: Deployment
