--- a/resources/namespaces/device1/base/kustomization.yaml
+++ b/resources/namespaces/device1/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: cluster-config
+namespace: device1
 resources:
   - namespace.yaml
   - super-api-release.yaml
