--- a/resources/namespaces/device1/base/super-api-release.yaml
+++ b/resources/namespaces/device1/base/super-api-release.yaml
@@ -16,5 +16,5 @@ spec:
   install:
     createNamespace: true
   interval: 1m0s
-  releaseName: super-api
+  releaseName: super-api-device2
   targetNamespace: device1
