--- a/clusters/dev/device1/kustomization.yaml
+++ b/clusters/dev/device1/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../resources/namespaces/device1/dev
+  - ../../../resources/namespaces/device1/dev
