--- a/resources/namespaces/device1/base/super-api-release.yaml
+++ b/resources/namespaces/device1/base/super-api-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: super-api
+  name: super-api-device1
   namespace: device1
 spec:
   chart:
@@ -16,4 +16,4 @@ spec:
   install:
     createNamespace: true
   interval: 1m0s
-  releaseName: super-api-device2
+  releaseName: super-api-device1
