--- a/resources/namespaces/device1/dev/super-api-release-values.yaml
+++ b/resources/namespaces/device1/dev/super-api-release-values.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: super-api
+  name: super-api-device1
   namespace: device1
 spec:
   values:
