--- a/resources/common/sources/kustomization.yaml
+++ b/resources/common/sources/kustomization.yaml
@@ -3,4 +3,4 @@ kind: Kustomization
 namespace: cluster-config
 resources:
   - redis-repository.yaml
-  - super-api-repository.yaml
+  - demo-frontend-repository.yaml
