--- a/resources/namespaces/device2/dev/super-api-release-values.yaml
+++ b/resources/namespaces/device2/dev/super-api-release-values.yaml
@@ -1,7 +1,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: super-api-device2
+  name: demo-frontend-device2
   namespace: device2
 spec:
   values:
