--- a/resources/common/infra/redis-release.yaml
+++ b/resources/common/infra/redis-release.yaml
@@ -6,6 +6,7 @@ spec:
   chart:
     spec:
       chart: redis
+      version: 19.5.5
       reconcileStrategy: ChartVersion
       sourceRef:
         kind: HelmRepository
