--- a/resources/namespaces/device2/dev/super-api-release-values.yaml
+++ b/resources/namespaces/device2/dev/super-api-release-values.yaml
@@ -4,7 +4,8 @@ metadata:
   name: demo-frontend-device2
   namespace: device2
 spec:
+  chart:
+    spec:
+      version: 19.5.3
   values:
-    image:
-      tag: 1.0.7
-    replicaCount: 3
+    replicaCount: 1
